--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3666,7 +3666,7 @@ input, select, textarea {
 					}
 	#footer4 {
 		background-attachment: scroll;
-		background-color: ##353f52;
+		background-color: ##facb33;
 		background-image: url("images/bottom-3200.svg");
 		background-position: top center;
 		background-repeat: repeat-x;
